[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ScreenShake.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pew_new_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Background.png" type="Texture" id=5]
[ext_resource path="res://Assets/Balcony.png" type="Texture" id=6]
[ext_resource path="res://Assets/Groom.png" type="Texture" id=7]
[ext_resource path="res://Assets/Priest_frames.png" type="Texture" id=8]
[ext_resource path="res://Assets/Prompt.png" type="Texture" id=9]
[ext_resource path="res://Assets/Marriage_01.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Divorce_01.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/GroomHurt.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Groom_head.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pew_new_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pew_new_3.png" type="Texture" id=15]
[ext_resource path="res://ScoreBar.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Gun_Single.png" type="Texture" id=17]
[ext_resource path="res://Assets/Avatar_head.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "Divorce"
length = 1.2
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "priestAnimationCallback"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.401, 0.402, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 4, 4 ), Vector2( 4, 4 ), Vector2( 4, 4 ), Vector2( 6, 4 ), Vector2( 4, 4 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("PriestSFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.7,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=2]
resource_name = "Marriage"
length = 0.9
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "priestAnimationCallback"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.65, 0.75, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 27.8576, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 6, 4 ), Vector2( 3, 4 ), Vector2( 2, 4 ), Vector2( 4, 4 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("PriestSFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 1.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0.25 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 100 )

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 17.1484 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 4, 4 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1024, 30 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 300, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 400 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Bounce",
"speed": 8.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "Opening"
length = 16.0
step = 1.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 4, 7, 10, 13, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 540, 300 ), 2.0 ],
"method": "moveCameraTo"
}, {
"args": [ false ],
"method": "openingCinematicMidBlurbs"
}, {
"args": [ Vector2( 1300, 300 ), 4.0 ],
"method": "moveCameraTo"
}, {
"args": [ true ],
"method": "openingCinematicMidBlurbs"
}, {
"args": [ Vector2( 916, 300 ), 2.0 ],
"method": "moveCameraTo"
}, {
"args": [  ],
"method": "openingCinematicCallback"
} ]
}

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Priest" type="Sprite" parent="."]
position = Vector2( 916, 375 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
vframes = 7
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Priest"]
anims/Divorce = SubResource( 1 )
anims/Marriage = SubResource( 2 )

[node name="Tween" type="Tween" parent="Priest"]

[node name="MarriageField" type="Area2D" parent="Priest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Priest/MarriageField"]
shape = SubResource( 3 )
disabled = true

[node name="Prompt" type="Sprite" parent="Priest"]
visible = false
position = Vector2( 0, -25 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )
vframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PriestSFX" type="AudioStreamPlayer" parent="Priest"]
stream = ExtResource( 10 )

[node name="Groom" type="Sprite" parent="."]
position = Vector2( 984.885, 394.008 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Groom"]
anims/Hurt = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Groom"]
stream = ExtResource( 12 )

[node name="Gun" type="Sprite" parent="Groom"]
visible = false
show_behind_parent = true
texture = ExtResource( 17 )

[node name="Balcony" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 0.9, 0.9 )
z_index = 3
texture = ExtResource( 6 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 844.786, 391.102 )

[node name="Floor" type="StaticBody2D" parent="." groups=[
"bullet_react",
]]
position = Vector2( 922, 465 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2( -600, -170 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor"]
position = Vector2( 600, -170 )
shape = SubResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 916, 300 )
current = true
__meta__ = {
"_edit_group_": true
}

[node name="ScreenShake" type="Node" parent="Camera"]
script = ExtResource( 2 )

[node name="Interpolator" type="Tween" parent="Camera/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera/ScreenShake"]

[node name="Mover" type="Tween" parent="Camera"]

[node name="Blocker" type="StaticBody2D" parent="Camera" groups=[
"bullet_react",
]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Blocker"]
position = Vector2( -530, 0 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera/Blocker"]
position = Vector2( 530, 0 )
shape = SubResource( 7 )

[node name="PewSet" type="YSort" parent="."]

[node name="L1" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 549.834, 506.131 )
scale = Vector2( 4, 4 )
frames = SubResource( 9 )
animation = "Bounce"
frame = 2
playing = true

[node name="R1" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 1300.31, 506.131 )
scale = Vector2( 4, 4 )
frames = SubResource( 9 )
animation = "Bounce"
frame = 1
playing = true

[node name="L2" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 527.34, 547.71 )
scale = Vector2( 4.2, 4.2 )
frames = SubResource( 9 )
animation = "Bounce"
frame = 1
playing = true
flip_h = true

[node name="R2" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 1324.84, 547.71 )
scale = Vector2( 4.2, 4.2 )
frames = SubResource( 9 )
animation = "Bounce"
frame = 1
playing = true
flip_h = true

[node name="L3" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 504.846, 592.016 )
scale = Vector2( 4.4, 4.4 )
frames = SubResource( 9 )
animation = "Bounce"
frame = 1
playing = true
flip_h = true

[node name="R3" type="AnimatedSprite" parent="PewSet"]
position = Vector2( 1352.79, 592.016 )
scale = Vector2( 4.4, 4.4 )
frames = SubResource( 9 )
animation = "Bounce"
playing = true
flip_h = true

[node name="Armistice_cndw" type="Timer" parent="."]
one_shot = true

[node name="Remarry_cndw" type="Timer" parent="."]
one_shot = true

[node name="Difficulty_increase_timer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 0

[node name="PlayerHPBar" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 60, 30 )
__meta__ = {
"_edit_group_": true
}

[node name="Head" type="Sprite" parent="HUD/PlayerHPBar"]
scale = Vector2( 4, 4 )
texture = ExtResource( 18 )

[node name="GroomHPBar" type="Node2D" parent="HUD"]
position = Vector2( 60, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Head" type="Sprite" parent="HUD/GroomHPBar"]
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )

[node name="GroomHPFlyIn" type="Tween" parent="HUD"]

[node name="ScoreBar" parent="." instance=ExtResource( 16 )]
visible = false
position = Vector2( 922, 160 )

[node name="OpeningCinematic" type="AnimationPlayer" parent="."]
anims/Opening = SubResource( 8 )
[connection signal="tween_all_completed" from="Priest/Tween" to="." method="priestTweenCallback"]
[connection signal="body_entered" from="Priest/MarriageField" to="." method="_on_MarriageField_body_entered"]
[connection signal="body_exited" from="Priest/MarriageField" to="." method="_on_MarriageField_body_exited"]
[connection signal="fire" from="Player" to="." method="_on_Player_fire"]
[connection signal="timeout" from="Camera/ScreenShake/Duration" to="Camera/ScreenShake" method="_on_Duration_timeout"]
[connection signal="timeout" from="Camera/ScreenShake/Frequency" to="Camera/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Armistice_cndw" to="." method="armisticeCountdownCallback"]
[connection signal="timeout" from="Remarry_cndw" to="." method="remarryCountdownCallback"]
[connection signal="timeout" from="Difficulty_increase_timer" to="." method="_on_Difficulty_increase_timer_timeout"]
